styled reach out

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Out the Form Above.</span></h3>
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
             <div>
@@ -96,13 +96,70 @@
         </section>
   
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron trainer</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, dolor porro iure sequi quaerat ipsam ut quas non consequuntur nihil suscipit, aliquam dolorum minima placeat, dolore labore facilis saepe eaque?
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et eos illum, excepturi suscipit fugit quis pariatur ad odit facere distinctio quas minima nam harum doloribus saepe. Quibusdam, assumenda amet.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolorem aliquam repellendus voluptatibus nulla hic, doloribus quasi velit illo deserunt exercitationem, officia repudiandae modi nostrum. Officia eligendi nobis sunt sequi.
+                    </p>
+                </div>
+            </article>
         </section>
   
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="contact-info">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3315.008402642112!2d-117.92116288442168!3d33.81209623779368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7d12b3b5e6b%3A0x2ef62f8418225cfa!2sDisneyland%20Park!5e0!3m2!1sen!2sus!4v1607501630968!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                frameborder="0" 
+                style="border:0;" 
+                allowfullscreen=""
+            >
+            </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                    <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street<br />
+                        Some Town, Ca <br />
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.7863.2839)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
+           
         </section>
   
         <!-- footer -->
