--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             Have you worked out with a trainer before?
                             <input type="radio" name="trainer-confirm" id="trainer-yes" />
                             <label for="trainer-yes">Yes</label>
-                            <input type="radio" name="trainer-confrim" id="trainer-no" />
+                            <input type="radio" name="trainer-confirm" id="trainer-no" />
                             <label for="trainer-no">No</label>
                         </p>
                         <p>
