--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <h2 class="section-title primary-border">What We Do</h2>
             </div>
             <div class="flex-row">
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
             </div>
         </section>
   
@@ -133,40 +133,43 @@
         </section>
   
         <!-- "meet the trainers" section -->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
             </div>
+            <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron trainer</h3>
-                    <h4>Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron trainer</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, dolor porro iure sequi quaerat ipsam ut quas non consequuntur nihil suscipit, aliquam dolorum minima placeat, dolore labore facilis saepe eaque?
                     </p>
                 </div>
             </article>
             <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et eos illum, excepturi suscipit fugit quis pariatur ad odit facere distinctio quas minima nam harum doloribus saepe. Quibusdam, assumenda amet.
                     </p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                
             </article>
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolorem aliquam repellendus voluptatibus nulla hic, doloribus quasi velit illo deserunt exercitationem, officia repudiandae modi nostrum. Officia eligendi nobis sunt sequi.
                     </p>
                 </div>
             </article>
+        </div>
         </section>
   
         <!-- "reach out" section -->
