--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a href="#your-trainers">Your Trainers</a>
                     </li>
                     <li>
+                        <a href="#service-plans">Service Plans</a>
+                    </li>
+                    <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>
                 </ul>
@@ -108,7 +111,8 @@
                         <p>Are you here to build muscle, lose weight, or just feel good?</p>
                     </div>
                 </div>
-            </div><div class="step">
+            </div>
+            <div class="step">
                 <h3>Step 3.</h3>
                 <div class="step-info">
                     <div class="step-img">
@@ -119,7 +123,8 @@
                         <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
                     </div>
                 </div>
-            </div><div class="step">
+            </div>
+            <div class="step">
                 <h3>Step 4.</h3>
                 <div class="step-info">
                     <div class="step-img">
@@ -172,6 +177,14 @@
         </div>
         </section>
   
+        <section id="service-plans" class="services">
+            <div class="service-grid-item">One</div>
+            <div class="service-grid-item">Two</div>
+            <div class="service-grid-item">Three</div>
+            <div class="service-grid-item">Four</div>
+            <div class="service-grid-item">Five</div>
+            <div class="service-grid-item">Six</div>
+        </section>
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
             <div class="flex-row">
