--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                         <p>Bi-weekly checkins with your trainer will keep you focused.</p>
                     </div>
                 </div>
+            </div>
         </section>
   
         <!-- "meet the trainers" section -->
